--- a/style.css
+++ b/style.css
@@ -3,4 +3,4 @@
 #Saif-Apps {width: 800px;}
 #Saif-Javascript {width: 800px;}
 #Saif-Home {width: 800px;}
-background-color {rgb: (153, 204, 255);}
+#photo-table {width: 800px;}
