--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 #Saif-Home {width: 800px;}
 #photo-table {width: 800px;}
 #music-table {width: 800px;}
-#Saif1 {width: 400px;}
+#Saif1 {width: 400px; margin-top: 30px;}
 #Saif2 {width: 400px;}
 #JCole {width: 400px;}
 #Rap {width: 400px;}
