--- a/style.css
+++ b/style.css
@@ -8,4 +8,4 @@
 #Saif2 {width: 200px;}
 #JCole {width: 200px;}
 #Rap {width: 200px;}
-background-color {rgb: 153, 204, 255;}
+body {background-color: rgb(153, 204, 255);}
