--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 #Saif2 {width: 200px;}
 #JCole {width: 200px;}
 #Rap {width: 200px;}
-body {background-color: rgb(153, 204, 255);}
+body {background-color: rgb(153, 204, 255); background-size: 7000px 5000px;}
 body {background-image: url(background.png); width: 10000px;}
 #about1 {color: white;}
 #about2 {color: white;}
