--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 #JCole {width: 200px;}
 #Rap {width: 200px;}
 body {background-color: rgb(153, 204, 255); background-size: 2000px 1000px;}
-body {background-image: url(background.png); width: 10000px;}
+body {background-image: url(background.png);}
 #about1 {color: white;}
 #about2 {color: white;}
 #index1 {color: white;}
